adding photo routes
